--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,17 @@
+DATE: 01/19/04
+STAFF: mbw
+CHANGES: fixed bug in RecordStamper so that the correct fields are getting stamped on update of a
+MGD formatted record
+
+DATE: 01/16/04
+STAFF: mbw
+CHANGES: getCGName() in the ColumnDef class now looks for and handles column with the name 'class'
+
+DATE: 01/16/04
+STAFF: mbw
+CHANGES: added new getRowReference method to the SQLDataManager
+
+
 TAG: lib_java_core-1-0-0
 DATE: 12/12/2003
 STAFF: mbw
