lib_java_core-RPCI_BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,7 +1,8 @@
+TAG: lib_java_core-RPCI_BP
 TAG: lib_java_core-1-0-2_BP
 DATE: 01/21/2004
 STAFF: lec
-CHANGES: Branch point tag for DEV_MGI vs. DEV1_MGI
+CHANGES: Branch point tag for DEV_MGI vs. DEV1_MGI (RPCI release)
 
 TAG: lib_java_core-1-0-2
 DATE: 01/21/2004
