tagged lib_java_core-RPCI-2

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-RPCI-2
+DATE: 01/26/2004
+STAFF: mbw
+CHANGES: changed hardcoded name for table segment
+
 TAG: lib_java_core-RPCI-1
 DATE: 01/26/2004
 STAFF: mbw
