--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-6
+DATE: 02/13/2004
+STAFF: jsb
+CHANGES:
+1) picking up changes lost in previous tag
+
 TAG: lib_java_core-1-0-5
 DATE: 02/11/2004
 STAFF: mbw
