--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-7
+DATE: 02/18/2004
+STAFF: jsb
+CHANGES:
+1) bundling changes for new development installation
+
 TAG: lib_java_core-1-0-6
 DATE: 02/13/2004
 STAFF: jsb
