--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-8
+DATE: 02/19/2004
+STAFF: sc
+CHANGES:
+1) bundling changes for new development installation
+
 DATE: 02/19/2004
 STAFF: mbw
 CHANGES:
