--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-10
+DATE: 03/15/2004
+STAFF: jsb, jw
+CHANGES:
+1) small modifications to DTOConstants.java for Java WI
+
 TAG: lib_java_core-1-0-9
 DATE: 03/04/2004
 STAFF: mbw
