--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-12
+DATE: 03/26/2004
+STAFF: jsb, jw
+CHANGES:
+1) various fixes and enhancements for next development build
+
 TAG: lib_java_core-1-0-11
 DATE: 03/18/2004
 STAFF: sc
