--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,11 @@
+DATE: 03/29/2004
+STAFF: mbw
+CHANGES:
+1) config - added accessors for data types of data and objects
+2) dbutils - made SQLDataManager, Table and DBSchema classes more compatible with non-sybase dbs
+3) dao - made close method public is SQLStream interface
+4) ioutils - now supports a begin record delimiter only
+
 TAG: lib_java_core-1-0-12
 DATE: 03/26/2004
 STAFF: jsb, jw
