--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-13
+DATE: 04/06/2004
+STAFF: sc
+CHANGES:
+1) tag incorporating changes listed below
+
 DATE: 03/29/2004
 STAFF: mbw
 CHANGES:
