tagged lib_java_core-1-0-14

--- a/HISTORY
+++ b/HISTORY
@@ -1,8 +1,10 @@
+TAG: lib_java_core-1-0-14
 DATE: 04/14/2004
 STAFF: mbw
 CHANGES:
 1) bug fix in Configurator when creating new java objects from a config file
-2) now handles correctly if a parameter was set in one file and referenced in another
+2) ConfigurationManager - now handles correctly if a parameter was set in one file and referenced in another
+3) Configuration - added an append method
 
 DATE: 04/02/2004
 STAFF: mbw
