--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-1-0-15
+DATE: 04/27/2004
+STAFF: mbw
+CHANGES: tag incorporating changes listed below
+
 DATE: 04/26/2004
 STAFF: mbw
 CHANGES:
