--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-16
+DATE: 05/03/2004
+STAFF: mbw
+CHANGES:
+1) various configuration-related changes
+
 TAG: lib_java_core-1-0-15
 DATE: 04/27/2004
 STAFF: mbw
