--- a/HISTORY
+++ b/HISTORY
@@ -1,6 +1,11 @@
+DATE: 05/05/2004
+STAFF: mbw
+CHANGES:
+1) the Converter class now returns 'null' in all toString method if target object is null
+
 TAG: lib_java_core-1-0-16
 DATE: 05/03/2004
-STAFF: mbw
+STAFF: jsb
 CHANGES:
 1) various configuration-related changes
 
