--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+DATE: 05/24/2004
+STAFF: mbw
+CHANGES:
+1) added new parameter, INFILE_CHARSET, to InputDataCfg and modified ioutils classes to use 
+   default value was set to be ISO-8859-1
+2) removed default values for begin and end delimiters in the InputDataCfg
+
 TAG: lib_java_core-1-0-17
 DATE: 05/05/2004
 STAFF: mbw
