--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-18
+DATE: 06/08/2004
+STAFF: sc
+CHANGES:
+See changes since last tag below
+
 DATE: 05/24/2004
 STAFF: mbw
 CHANGES:
