--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-1-0-20
+DATE: 07/28/2004
+STAFF: mbw
+CHANGES:
+javadocs only
+
 TAG: lib_java_core-1-0-19
 DATE: 07/28/2004
 STAFF: mbw
