--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG:lib_java_core-1-0-21
+DATE: 8/4/2004
+STAFF: jsb
+CHANGES:
+1) updates for 3.01 release
+
 DATE: 07/30/2004
 STAFF: mbw
 CHANGES:
