--- a/HISTORY
+++ b/HISTORY
@@ -2,6 +2,8 @@ DATE: 9/03/2004
 STAFF: mbw
 CHANGES:
 1) added a check in the DBSchema class to look for improperly nested quotations in dbschema product
+2) the getTable() method in the SQLDataManager now throws DBException
+3) the Table class checks connections on all cached Table instances
 
 TAG:lib_java_core-1-0-23
 DATE: 8/27/2004
