--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+DATE: 9/08/2004
+STAFF: mbw
+CHANGES:
+1) added new TestManager class to the unitTest package
+
 DATE: 9/03/2004
 STAFF: mbw
 CHANGES:
