--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG:lib_java_core-1-0-23-patch-1
+DATE: 10/97/2004
+STAFF: mbw
+CHANGES:TR6264
+ScriptWriter - add debug logging of the isql command
+
 TAG:lib_java_core-1-0-23
 DATE: 8/27/2004
 STAFF: mbw
