--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+DATE: 10/12/2004
+STAFF: mbw
+CHANGES: removed debug statements from the RecordDataReader class
+
 TAG:lib_java_core-1-0-26
 DATE: 10/11/2004
 STAFF: mbw
