--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-1-0-27
+DATE: 10/12/2004
+STAFF: mbw
+CHANGES: see changes since last tag
+
 DATE: 10/12/2004
 STAFF: mbw
 CHANGES: removed debug statements from the RecordDataReader class
