--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-1-0-29
+DATE: 10/22/2004
+STAFF: mbw
+CHANGES: BindableStatement now checks the DBDEBUG parameter to see if it should log sql
+
 TAG:lib_java_core-1-0-28
 DATE: 10/12/2004
 STAFF: mbw
