--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+DATE: 10/26/2004
+STAFF: mbw
+CHANGES: added new functionality to the unit testing class TestManager
+
 TAG:lib_java_core-1-0-29
 DATE: 10/22/2004
 STAFF: mbw
