tagged lib_java_core-1-0-31

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-1-0-31
+DATE: 11/05/2004
+STAFF: mbw
+CHANGES: tagged to include changes Josh made to the DTOConstants class
+
 TAG:lib_java_core-1-0-30
 DATE: 11/04/2004
 STAFF: mbw
