--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG:lib_java_core-assembly-1
+DATE: 11/05/2004
+STAFF: mbw
+CHANGES: 1) bug fix in Configuration class: now throws exception when it cannot resolve a configuration parameter
+         2) continued initial development of TestManager
+
 TAG:lib_java_core-assembly-BP
 DATE: 12/02/2004
 STAFF: mbw
