--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+DATE: 11/05/2004
+STAFF: mbw
+CHANGES: now supports double precision instead of single
+
 TAG:lib_java_core-assembly-1
 DATE: 11/05/2004
 STAFF: mbw
