lib_java_core-tr3007-1

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,7 @@
+TAG: lib_java_core-tr3007-1
+DATE: 01/25/2005
+STAFF: dbm
+
 DATE: 01/24/2004
 STAFF: mbw
 CHANGES: moved DataOutputFile and support classes to tr6427 branch
