--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-3-1-1-2
+DATE: 02/18/2005
+STAFF: dbm
+CHANGES: Merged tr3007 branch for MGC release
+
 TAG: lib_java_core-3-1-1-1
 DATE: 01/26/2005
 STAFF: pf
@@ -6,6 +11,22 @@ CHANGES: merge maint6300 to trunk
 TAG: lib_java_core-maint6300-BP
 DATE: 01/20/2005
 STAFF: pf
+
+TAG: lib_java_core-tr3007-1
+DATE: 01/25/2005
+STAFF: dbm
+
+DATE: 01/24/2004
+STAFF: mbw
+CHANGES: moved DataOutputFile and support classes to tr6427 branch
+
+DATE: 01/05/2004
+STAFF: dbm
+CHANGES: added DataOutputFile and support classes
+
+DATE: 01/04/2004
+STAFF: mbw
+CHANGES: bug fix on RowDataIterator from dbutils package
 
 TAG: lib_java_core-tr3007-BP
 DATE: 01/04/2005
