--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr4289-BP
+DATE: 04/10/2005
+STAFF: dow
+CHANGES: adding values to DTOConstants for MPR release.
+
 TAG:lib_java_core-tr6046-BP
 DATE: 04/07/2005
 STAFF: mbw
