--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-omim-BP
+DATE: 07/20/2005
+STAFF: jsb
+CHANGES: branch point for OMIM release, changes to occur in DTOConstants.java
+
 TAG:lib_java_core-3-2-0-0
 DATE: 04/12/2005
 STAFF: dow
