tagged lib_java_core-tr6427-1

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr6427-1
+DATE: 08/03/2005
+CHANGES: initial integration test
+STAFF: mbw
+
 TAG:lib_java_core-tr6427-BP
 DATE: 12/20/2004
 STAFF: mbw
