--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr6046-1
+DATE: 08/03/2005
+STAFF: mbw
+CHANGES: first integration test
+
 TAG:lib_java_core-tr6046-BP
 DATE: 04/07/2005
 STAFF: mbw
