tagged lib_java_core-tr6046-2

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr6046-2
+DATE: 08/03/2005
+STAFF: mbw
+CHANGES: integration testing
+
 TAG:lib_java_core-tr6046-1
 DATE: 08/03/2005
 STAFF: mbw
