--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-3-2-0-1
+DATE: 08/04/2005
+STAFF: mbw
+CHANGES: Merged tr6427 and tr6046 to the trunk
+
 TAG:lib_java_core-tr6427-1
 DATE: 08/03/2005
 CHANGES: initial integration test
