--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-3-2-0-5
+DATE: 08/15/2005
+STAFF: mbw
+CHANGES: javadocs only
+
 TAG:lib_java_core-3-2-0-4
 DATE: 08/09/2005
 STAFF: mbw
