--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-omim-1
+DATE: 08/23/2005
+STAFF: jsb, dow
+CHANGES: changes to DTOConstants.java
+
 TAG:lib_java_core-omim-BP
 DATE: 07/20/2005
 STAFF: jsb
