tagged lib_java_core-tr7050-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr7050-BP
+DATE: 08/25/2005
+STAFF: mbw
+CHANGES: lib_java_core to do list
+
 TAG:lib_java_core-3-3-0-0
 DATE: 08/25/2005
 STAFF: dow
