--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr7048-BP
+DATE: 08/25/2005
+STAFF: mbw
+CHANGES: frameworks documentation
+
 TAG:lib_java_core-tr7050-BP
 DATE: 08/25/2005
 STAFF: mbw
