lib_java_core-3-3-0-1

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG:lib_java_core-3-3-0-1
+DATE: 09/01/2005
+STAFF: jsb
+CHANGES: 
+1) updates to DTOConstants.java for 2nd OMIM alpha build
+
 TAG:lib_java_core-tr7048-BP
 DATE: 08/25/2005
 STAFF: mbw
