--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr7067-BP
+DATE: 09/07/2005
+STAFF: mbw
+CHANGES: branch point tag for upgrade to jconnect 6.0
+
 TAG:lib_java_core-3-3-0-1
 DATE: 09/01/2005
 STAFF: jsb
