--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr5972-BP
+DATE: 09/07/2005
+STAFF: mbw
+CHANGES: branch point tag for pirsfload
+
 TAG:lib_java_core-tr7067-BP
 DATE: 09/07/2005
 STAFF: mbw
