--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr7081-1
+DATE: 09/21/2005
+STAFF: mbw
+CHANGES: merged branch tr5972
+
 TAG:lib_java_core-tr7081-BP
 DATE: 09/21/2005
 STAFF: mbw
