--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,43 @@
+TAG:lib_java_core-3-4-0-0
+DATE: 10/13/2005
+STAFF: sc
+CHANGES: tr7081 branch merge to trunk
+
+TAG:lib_java_core-tr7081-5
+DATE: 10/04/2005
+STAFF: mbw
+CHANGES: modified ioutils classes to support additional reporting functionality
+
+TAG:lib_java_core-tr7081-4
+DATE: 10/04/2005
+STAFF: jsb
+CHANGES: moved DTOConstants.java to dbsmgd product
+
+TAG:lib_java_core-tr7081-3
+DATE: 09/30/2005
+STAFF: mbw
+CHANGES: development build
+
+DATE: 09/30/2005
+STAFF: mbw
+CHANGES: updated to point to newly installed stax jars and made some development changes to XML classes in ioutils
+
+DATE: 09/22/2005
+STAFF: mbw
+CHANGES: added third part stax jar to classpath in build.properties.default. 
+Note this is pointing to temporary location of jars and will need to be 
+updated once the third party jars are installed
+
+TAG:lib_java_core-tr7081-2
+DATE: 09/21/2005
+STAFF: mbw
+CHANGES: moved AbstractCommand classes over from lib_java_dla
+
+TAG:lib_java_core-tr7081-1
+DATE: 09/21/2005
+STAFF: mbw
+CHANGES: merged branch tr5972
+
 TAG:lib_java_core-tr7081-BP
 DATE: 09/21/2005
 STAFF: mbw
