--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr7041-BP
+DATE: 10/19/2005
+STAFF: mbw
+CHANGES: branch point tag
+
 TAG:lib_java_core-3-4-0-0
 DATE: 10/13/2005
 STAFF: sc
