--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-3-4-0-2
+DATE: 10/25/2005
+STAFF: mbw
+CHANGES: javadocs
+
 TAG:lib_java_core-3-4-0-1
 DATE: 10/21/2005
 STAFF: mbw
