tagged lib_java_core-3-4-0-3

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-3-4-0-3
+DATE: 12/01/2005
+STAFF: mbw
+CHANGES: system docs
+
 TAG:lib_java_core-3-4-0-2
 DATE: 10/25/2005
 STAFF: mbw
