tagged lib_java_core-3-4-0-4

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-3-4-0-4
+DATE: 12/02/2005
+STAFF: mbw
+CHANGES: regenerated pdf design doc for ioutils
+
 TAG:lib_java_core-3-4-0-3
 DATE: 12/01/2005
 STAFF: mbw
