tagged lib_java_core-tr7306-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG:lib_java_core-tr7306-BP
+DATE: 12/07/2005
+STAFF: mbw
+CHANGES: branch point tag 
+
 TAG:lib_java_core-3-4-1-1
 DATE: 12/02/2005
 STAFF: mbw
