--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-tr7203-BP
+DATE: 1/10/2006
+STAFF: sc
+CHANGES: branch point tag for tr7203 dbsnp build125 
+         changes
+
 TAG:lib_java_core-tr7306-BP
 DATE: 12/07/2005
 STAFF: mbw
