--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: lib_java_core-tr7203-1
+DATE: 1/16/2006
+STAFF: sc
+CHANGES:
+1) XMLTagIterator - updated to support varying number 
+   of attributes for a given TAG line
+
 TAG: lib_java_core-tr7203-BP
 DATE: 1/10/2006
 STAFF: sc
