lib_java_core-tr7203-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr7203-BP
+DATE: 2/28/2006
+STAFF: sc
+CHANGES: MGI3.44 Branch Point tag
+
 TAG: lib_java_core-3-4-3-1
 DATE: 2/10/2006
 STAFF: sc
