lib_java_core-tr6594-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr6594-BP
+DATE: 3/2/2006
+STAFF: dbm
+CHANGES: Branch point tag for configuration changes
+
 TAG: lib_java_core-tr7379-BP
 DATE: 2/28/2006
 STAFF: sc
