--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-3-5-0-2
+DATE: 5/2/2006
+STAFF: dbm
+CHANGES:
+1) Merge configuration changes from tr6549 branch
+
 TAG: lib_java_core-3-5-0-1
 DATE: 4/27/2006
 STAFF: sc
@@ -8,6 +14,16 @@ TAG: lib_java_core-3-4-4-1
 DATE: 4/6/2006
 STAFF: sc
 CHANGES: merge tr7379 branch to trunk
+
+TAG:lib_java_core-tr6594-2
+DATE: 3/27/2006
+STAFF: dbm
+CHANGES: Consolidate build scripts
+
+TAG:lib_java_core-tr6594-1
+DATE: 3/7/2006
+STAFF: dbm
+CHANGES: Initial tag for testing installation
 
 TAG: lib_java_core-tr6594-BP
 DATE: 3/2/2006
