lib_java_core-build36-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-build36-BP
+DATE: 8/3/2006
+STAFF: sc
+CHANGES: MGI3.51 (build36) branch point tag
+
 TAG: lib_java_core-3-5-0-2
 DATE: 5/2/2006
 STAFF: dbm
