--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr7894-1
+DATE: 10/10/2006
+STAFF: lec
+CHANGES: TR7943; has to go out with TR7894
+
 TAG: lib_java_core-BP-tr7894
 DATE: 10/10/2006
 STAFF: lec
