--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,13 @@
+TAG: lib_java_core-3-5-1-2
+DATE: 10/23/2006
+STAFF: lec
+CHANGES: merge tr7894 branch
+
+TAG: lib_java_core-tr7894-1
+DATE: 10/10/2006
+STAFF: lec
+CHANGES: TR7943; has to go out with TR7894
+
 TAG: lib_java_core-BP-tr7894
 DATE: 10/10/2006
 STAFF: lec
