--- a/HISTORY
+++ b/HISTORY
@@ -2,6 +2,7 @@ TAG: lib_java_core-3-5-1-3
 DATE: 12/05/2006
 STAFF: lec
 CHANGES: 
+1) shr/ioutils/OutputDataFile.java
 
 TAG: lib_java_core-3-5-1-2
 DATE: 10/23/2006
