--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-BP-tr8068
+DATE: 12/21/2006
+STAFF: lec
+CHANGES: 
+1) branch point tag for TR8069 (html formatting)
+
 TAG: lib_java_core-3-5-1-3
 DATE: 12/05/2006
 STAFF: lec
