lib_java_core-3-5-1-4

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-3-5-1-4
+DATE: 12/22/2006
+STAFF: lec
+CHANGES: 
+1) bourne shell parse fix
+
 TAG: lib_java_core-BP-tr8068
 DATE: 12/21/2006
 STAFF: lec
