--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-tr8068-2
+DATE: 02/02/2007
+STAFF: lec
+CHANGES: 
+1) TR8068 (html formatting)
+
 TAG: lib_java_core-tr8068-1
 DATE: 12/21/2006
 STAFF: lec
