lib_java_core-3-5-1-5

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-3-5-1-5
+DATE: 02/02/2007
+STAFF: lec
+CHANGES: 
+1) TR8068 merge
+
 TAG: lib_java_core-3-5-1-4
 DATE: 12/22/2006
 STAFF: lec
