--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr8087-(BP,1)
+DATE: 9/15/2007 (latest)
+STAFF: pf
+CHANGES: branch and branch point tags for MGI 4.0 release
+
 TAG: lib_java_core-3-5-1-5
 DATE: 02/02/2007
 STAFF: lec
