--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr8079-BP
+DATE: 05/14/2008
+STAFF: jsb
+CHANGES: branch point for tr8079 (phenoview)
+
 TAG: lib_java_core-4-0-0-1
 DATE: 12/24/2007
 STAFF: pf
