--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-tr8079-1
+DATE: 05/14/2008
+STAFF: jsb
+CHANGES: 
+1) added guarantee() method to ExpiringObjectCache.java
+
 TAG: lib_java_core-tr8079-BP
 DATE: 05/14/2008
 STAFF: jsb
