--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-tr9231-1
+DATE: 09/03/2008
+STAFF: sc
+CHANGES: Converter.toSQLString - updated to remove 
+  embedded single quotes
+
 TAG: lib_java_core-tr9231-BP
 DATE: 09/03/2008
 STAFF: sc
