lib_java_core-tr7493-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr7493-BP
+DATE: 02/02/2090
+STAFF: sc
+CHANGES: Gene Trap Less Filling branch point tag
+
 TAG: lib_java_core-4-1-2-2
 DATE: 10/08/2008
 STAFF: sc	
