--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,16 @@
+TAG: lib_java_core-4-3-0-1
+DATE: 07/14/2009
+STAFF: sc
+CHANGES: Merge tr7403 branch to trunk
+
+TAG: lib_java_core-tr7493-1
+DATE: 02/13/2009
+STAFF: sc
+CHANGES:
+1) org.jax.mgi.shr.dbutils.InterpretedQuery overwrote with version from egload
+2) org.jax.mgi.shr.dbutils.ObjectQuery copied from egload
+Note: need to remove above from egload 
+
 TAG: lib_java_core-tr7493-BP
 DATE: 02/02/2090
 STAFF: sc
