lib_java_core-4-3-4-1

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,9 @@
+TAG: lib_java_core-4-3-4-1
+DATE: 05/19/2010
+STAFF: dbm
+CHANGES: shire retirement (TR9777)
+1) SchemaConstants.java: Added definition for MGDBE
+
 TAG: lib_java_core-4-3-0-1
 DATE: 07/14/2009
 STAFF: sc
