--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr7106
+DATE: 07/20/2012
+STAFF: marka
+CHANGES: branching core
+
 TAG: lib_java_core-5-0-0-0
 DATE: 12/20/2011
 STAFF: jsb
