lib_java_core-5-1-1-1

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-5-1-1-1
+DATE: 11/06/2012
+STAFF: jsb
+CHANGES: merged tr7106 branch into trunk
+
 TAG: lib_java_core-tr7106
 DATE: 07/20/2012
 STAFF: marka
