lib_java_core-tr11382-BP

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr11382-BP
+DATE: 06/19/2013
+STAFF: lec
+CHANGES: branch point tag for tr11382/Infrastructure Sybase 15
+
 TAG: lib_java_core-5-1-1-1
 DATE: 11/06/2012
 STAFF: jsb
