--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,10 @@
+TAG: lib_java_core-5-2-1-0
+DATE: 06/10/2015
+STAFF: lnh
+CHANGES:
+TR11944 - Retire IMSR
+1) Removed the line "public static final String IMSR = "IMSR"" from java/org/jax/mgi/dbs/SchemaConstants.java
+
 TAG: lib_java_core-tr11382-BP
 DATE: 06/19/2013
 STAFF: lec
