--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-tr11750-MP
+DATE: 7/1/15
+STAFF: pf
+CHANGES: merging to trunk
+
 TAG: lib_java_core-5-2-1-0
 DATE: 06/10/2015
 STAFF: lnh
