lib_java_core-6-0-7-1

--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-6-0-7-1
+DATE: 1/17/2017
+STAFF: dbm
+CHANGES: Conversion to github
+
 TAG: lib_java_core-6-0-0-2
 TAG: lib_java_core-6-0-0-1
 DATE: 7/23/15
