--- a/HISTORY
+++ b/HISTORY
@@ -1,3 +1,8 @@
+TAG: lib_java_core-6-0-16-1
+DATE: 10/30/2020
+STAFF: dbm
+CHANGES: postgres 12 changes
+
 TAG: lib_java_core-6-0-7-1
 DATE: 1/17/2017
 STAFF: dbm
